# CG_Graphics_Engine

./: .gitignore  CMakeLists.txt  README.md  TODO.md  TransformationMatrix.cpp  TransformationMatrix.h  engine.cc
2DLSystem/: LSystem2D.cpp  LSystem2D.h  LSystem2DParser.cpp  LSystem2DParser.h  Line2D.cpp  Line2D.h  LineColor.h
2DLSystem/l_systems/: default.profraw
3DFigures/: WireframeFigureDrawing3D.cpp  WireframeFigureDrawing3D.h
3DLinedrawings/: Face3D.cpp  Face3D.h  Figure3D.cpp  Figure3D.h  Linedrawing3D.cpp  Linedrawing3D.h  Linedrawing3DFigureParser.cpp  Linedrawing3DFigureParser.h  WireframeFigureParser.cpp  WireframeFigureParser.h  WireframeParser.cpp  WireframeParser.h
3DLinedrawings/line_drawings/: default.profraw  filelist
3DWireframeFigureDrawings/: WireframeFigureDrawing3D.cpp  WireframeFigureDrawing3D.h  WireframeFigureDrawing3DParser.cpp  WireframeFigureDrawing3DParser.h
3DWireframeFigureDrawings/wireframes/: filelist
InputFiles/: default.profraw
Objects/: Figure3D.cpp  Figure3D.h  Line2D.cpp  Line2D.h  PlatonicFigure.cpp  PlatonicFigure.h  Point2D.cpp  Point2D.h  TransformationMatrix.cpp  TransformationMatrix.h  ZBuffer.cpp  ZBuffer.h  vector3d.h
Parsers/: FigureParser.cpp  FigureParser.h  LSystem2DParser.cpp  LSystem2DParser.h  WireframeFigureParser.cpp  WireframeFigureParser.h  WireframeParser.cpp  WireframeParser.h  ZBufferParser.cpp  ZBufferParser.h  ZBufferedWireframeParser.cpp  ZBufferedWireframeParser.h
SharedFunctions/: DrawLines.cpp  DrawLines.h  FigureFractaliser.cpp  FigureFractaliser.h  ImageDrawer.cpp  ImageDrawer.h  ImageSize.cpp  ImageSize.h  LSystemFunctions.cpp  LSystemFunctions.h  ProjectionFunctions.cpp  ProjectionFunctions.h  ScaleLines.cpp  ScaleLines.h  SplitTriangleFaces.cpp  SplitTriangleFaces.h  TriangulateFace.cpp  TriangulateFace.h
objects/: Face3D.h  Figure3D.cpp  Figure3D.h  Line2D.cpp
